@@ -5,8 +5,8 @@ Description: Barzilai-Borwein Spectral Methods for solving nonlinear system of
  constraints.
 Depends: R (>= 2.6.1)
 Suggests: numDeriv, setRNG
-Version: 2008.7-1
-Date: 2008-7-26
+Version: 2008.8-1
+Date: 2008-8-04
 LazyLoad: yes
 License: GPL-3
 Author: Ravi Varadhan
